--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">zz-giraffe</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/zz-giraffe" target="_blank">zz-giraffe</a> and is
+          <a href="https://github.com/zz-giraffe/Ops-Challenges" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
